@@ -1,5 +1,8 @@
 Revision history for Perl module App::rmspaces
 
+Unpublished
+  * Fix license fields for metadata.
+
 0.3 2017-07-18
   * Document mass moving files feature.
   * rmspaces is now under the App::rmspaces module.
